k8s/overlays/prod-us/patches/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-admin-route
spec:
  parentRefs:
  - name: external-gateway
    namespace: gateway
  hostnames:
  - "agentgateway-admin.us.neuraltrust.ai"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-proxy-route
spec:
  parentRefs:
  - name: external-gateway
    namespace: gateway
  hostnames:
  - "agentgateway.us.neuraltrust.ai"
  - "gateway-llm.us.neuraltrust.ai"
  - "*.llm.us.neuraltrust.ai"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-mcp-route
spec:
  parentRefs:
  - name: external-gateway
    namespace: gateway
  hostnames:
  - "agentgateway-mcp.us.neuraltrust.ai"
  - "gateway-mcp.us.neuraltrust.ai"
  - "*.mcp.us.neuraltrust.ai"
